--- a/CalculatorJAVA/app/src/main/res/layout/activity_main.xml
+++ b/CalculatorJAVA/app/src/main/res/layout/activity_main.xml
@@ -53,14 +53,12 @@
     <TableLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_margin="0dp"
         android:background="#2C2E30"
         android:gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textField">
 
@@ -72,8 +70,8 @@
 
             <Button
                 android:id="@+id/buttonAllClear"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -84,8 +82,8 @@
 
             <Button
                 android:id="@+id/buttonClear"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -96,8 +94,8 @@
 
             <Button
                 android:id="@+id/buttonDelete"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -108,8 +106,8 @@
 
             <Button
                 android:id="@+id/buttonDivide"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -128,8 +126,8 @@
 
             <Button
                 android:id="@+id/buttonSeven"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -140,8 +138,8 @@
 
             <Button
                 android:id="@+id/buttonEight"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -152,8 +150,8 @@
 
             <Button
                 android:id="@+id/buttonNine"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -164,8 +162,8 @@
 
             <Button
                 android:id="@+id/buttonMultiply"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -184,8 +182,8 @@
 
             <Button
                 android:id="@+id/buttonFour"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -196,8 +194,8 @@
 
             <Button
                 android:id="@+id/buttonFive"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -208,8 +206,8 @@
 
             <Button
                 android:id="@+id/buttonSix"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -220,8 +218,8 @@
 
             <Button
                 android:id="@+id/buttonPlus"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -239,8 +237,8 @@
 
             <Button
                 android:id="@+id/buttonOne"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -251,8 +249,8 @@
 
             <Button
                 android:id="@+id/buttonTwo"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -263,8 +261,8 @@
 
             <Button
                 android:id="@+id/buttonThree"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -275,8 +273,8 @@
 
             <Button
                 android:id="@+id/buttonMinus"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -294,8 +292,8 @@
 
             <Button
                 android:id="@+id/buttonPlusMinus"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -306,8 +304,8 @@
 
             <Button
                 android:id="@+id/buttonZero"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -318,8 +316,8 @@
 
             <Button
                 android:id="@+id/buttonDot"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
@@ -330,8 +328,8 @@
 
             <Button
                 android:id="@+id/buttonEqual"
-                android:layout_width="95dp"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:insetLeft="1dp"
                 android:insetTop="1dp"
                 android:insetRight="1dp"
